# ecash-ckpool-solo

./: .gitignore  ChangeLog  Makefile.am  README  README-SOLOMINING  README.md  ckpool.conf  ckpool.ecash.conf  configure.ac
src/: Makefile.am  bitcoin.c  bitcoin.h  ckpmsg.c  ckpool.c  ckpool.h  connector.c  generator.c  generator.h  libckpool.c  libckpool.h  stratifier.c  stratifier.h  uthash.h
src/jansson-2.14/: Makefile.am  configure.ac  jansson_private_config.h.in
src/jansson-2.14/src/: dump.c  jansson.h  jansson_private.h  memory.c  strbuffer.c  utf.c  utf.h
src/jansson-2.6/src/: value.c
